Add issuer_id to Prepared and Signed TransactionData (#2219)
* Add issuer_id to Prepared and Signed TransactionData

* Bump h2 dependency

* Add missing field

* Prefer signed_transaction_data issuer_id over options issuer_id

* Add alpha tag

--- a/.github/workflows/bindings-nodejs-publish.yml
+++ b/.github/workflows/bindings-nodejs-publish.yml
@@ -50,7 +50,7 @@ jobs:
         shell: sh
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: yarn publish --access public
+        run: yarn publish --access public --tag alpha
 
   nodejs-binding-prebuild:
     runs-on: ${{ matrix.os }}
