chore: Fix gon config for Node.js bindings (#2228)

--- a/bindings/nodejs/gon-config.json
+++ b/bindings/nodejs/gon-config.json
@@ -2,7 +2,7 @@
     "source": ["./build/Release/index.node"],
     "bundle_id": "org.iota.sdk-nodejs",
     "apple_id": {
-        "password": "@env:AC_PASSWORD"
+        "provider": "UG77RJKZHH"
     },
     "sign": {
         "application_identity": "Developer ID Application: IOTA Stiftung (UG77RJKZHH)"
