--- a/.github/workflows/bindings-nodejs-publish.yml
+++ b/.github/workflows/bindings-nodejs-publish.yml
@@ -263,3 +263,4 @@ jobs:
           body: https://github.com/iotaledger/iota-sdk/blob/develop/bindings/nodejs/CHANGELOG.md
           files: bindings/nodejs/prebuilds/@iota/*
           tag_name: ${{ steps.prepare_release.outputs.tag_name }}
+          target_commitish: ${{ github.sha }}
