--- a/.github/workflows/bindings-python-publish.yml
+++ b/.github/workflows/bindings-python-publish.yml
@@ -162,6 +162,7 @@ jobs:
           body: https://github.com/iotaledger/iota-sdk/blob/develop/bindings/python/CHANGELOG.md
           files: wheels/*
           tag_name: ${{ steps.tagname.outputs.TAG_NAME }}
+          target_commitish: ${{ github.sha }}
 
       - uses: actions/setup-python@v4
         with:
