--- a/bindings/python/Cargo.toml
+++ b/bindings/python/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "iota-sdk-python"
-version = "1.1.4"
+version = "2.0.0-alpha.1"
 authors = ["IOTA Stiftung"]
 edition = "2021"
 description = "Python bindings for the IOTA SDK library"
