Prepare cli alpha release (#2247)

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cli-wallet"
-version = "1.3.0"
+version = "2.0.0-alpha.1"
 authors = ["IOTA Stiftung"]
 edition = "2021"
 homepage = "https://iota.org"
