Fix get_output_mana_rewards, clippy (#2246)

--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@iota/sdk-wasm",
-    "version": "2.0.0-alpha.3",
+    "version": "2.0.0-beta.1",
     "description": "WebAssembly bindings for the IOTA SDK library",
     "repository": {
         "type": "git",
